--- a/inventory/group_vars/rhsso.yml
+++ b/inventory/group_vars/rhsso.yml
@@ -8,7 +8,7 @@ keycloak_db_pass: keycloak-pass
 keycloak_rhsso_enable: True
 keycloak_configure_firewalld: True
 
-admin_pass: "redhat1!but12long"
+admin_pass: "remembertochangeme"
 
 infinispan_user: rhsso
 infinispan_pass: rhssopassword
